add accessibility button attributes

--- a/index.html
+++ b/index.html
@@ -26,5 +26,11 @@
     border-radius: 0.3rem;
     font-size: 40px;
     color: #fff;
+    cursor: pointer;
+  }
+  .btn-style:hover {
+    color: #ffffff;
+    text-decoration: underline;
+    -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
   }
 </style>
