--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </html>
 
 <style>
+  body {
+    background: rgb(33, 37, 41);
+  }
   .group-btn {
     display: flex;
     text-align: center;
@@ -25,11 +28,11 @@
     line-height: 1.5;
     border-radius: 0.3rem;
     font-size: 40px;
-    color: #fff;
+    color: rgb(255, 255, 255);
     cursor: pointer;
   }
   .btn-style:hover {
-    color: #ffffff;
+    color: rgb(255, 255, 255);
     text-decoration: underline;
     -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
   }
