--- a/index.html
+++ b/index.html
@@ -1,39 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Callback js</title>
-</head>
-<body>
-  <div class="group-btn"></div>
-  <script src="script.js"></script>
-</body>
-</html>
+# Callback Javascript
 
-<style>
-  body {
-    background: rgb(33, 37, 41);
-  }
-  .group-btn {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    margin-top: 10rem;
-  }
-  .btn-style {
-    margin: 0.25rem;
-    padding: 0.5rem 1rem;
-    line-height: 1.5;
-    border-radius: 0.3rem;
-    font-size: 40px;
-    color: rgb(255, 255, 255);
-    cursor: pointer;
-  }
-  .btn-style:hover {
-    color: rgb(255, 255, 255);
-    text-decoration: underline;
-    -webkit-box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
-  }
-</style>
+## Contents
+
+content 1 edit
+
+```js
+const Button = (text, callback) => {
+  const body = document.querySelector("div.group-btn")
+  const button = document.createElement("button")
+  button.textContent = text
+  button.classList.add("btn-style")
+  button.setAttribute("role", "button")
+
+  callback(button)
+
+  body.insertAdjacentElement("beforeend", button)
+
+  return button
+}
+```
+content 2 edit
+
+```js
+Button("Primary", (button) => {
+  button.style.cssText = `
+    background-color: #007bff;
+    border-color: #007bff;
+  `
+  button.setAttribute("aria-describedby", "primary alert button")
+
+  button.addEventListener("click",() => {
+    alert("Primary button click!")
+  })
+})
+```
+<br/>
+
+# Complementary material
+## Editorconfig
+Link: https://editorconfig.org/
+
+## Editorconfig extension for Visual Studio code
+Link: https://marketplace.visualstudio.com/items?itemName=EditorConfig.EditorConfig
+
+## Live Server (extension for Visual Studio code)
+Link: https://marketplace.visualstudio.com/items?itemName=ritwickdey.LiveServer
+
+## Element: insertAdjacentHTML() method
+Link: https://developer.mozilla.org/en-US/docs/Web/API/Element/insertAdjacentHTML
+
+## CSSStyleDeclaration: cssText property
+Link: https://developer.mozilla.org/en-US/docs/Web/API/CSSStyleDeclaration/cssText
+## Element: classList property ->
+Link: https://developer.mozilla.org/en-US/docs/Web/API/Element/classList
+
+
